# Git

./: setup.cfg
src/austin_heller_repo/: git.py  git_manager.py
src/git_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt
src/git_manager_austinhellerrepo.egg-info/: PKG-INFO  SOURCES.txt
test/: git_manager_test.py
