[metadata]
name = git-manager-austinhellerrepo
version = 0.0.5
author = Austin Heller
description = A basic git management package
url = https://github.com/AustinHellerRepo/GitManager
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operation System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8
install_requires =
  gitpython

[options.packages.find]
where = src
